some word in lab3 were corrected

--- a/Lab3/FIA_Lab_3.ipynb
+++ b/Lab3/FIA_Lab_3.ipynb
@@ -43,7 +43,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn import preprocessing"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "id": "APPKjFE7bus4"
       },
       "source": [
-        "After we have imported the librarie, we need to read our data from a .txt file. We read it using pandas. Pandas will create a dataFrame which will represent a table. When we read it, we can also specify the names for the columns and later we can use these names to retrieve partial data from the table. The column that we know what they represent are: complexAge, totalRooms, totalBedrooms, complexInhabitats, aprtmentNr and medianComplexValue. The medianComplexValue is the one that depends on the orher ones and we whould predict this values using our linear regression model."
+        "After we have imported the librarie, we need to read our data from a .txt file. We read it using pandas. Pandas will create a DataFrame which will represent a table. When we read it, we can also specify the names for the columns and later we can use these names to retrieve partial data from the table. The column that we know what they represent are: complexAge, totalRooms, totalBedrooms, complexInhabitats, aprtmentNr and medianComplexValue. The medianComplexValue is the one that depends on the other ones and we whould predict this values using our linear regression model."
       ]
     },
     {
@@ -66,7 +66,7 @@
         "    delimiter=',' \n",
         ")"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
         "\n",
         "pd_data"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -324,12 +324,12 @@
         "id": "i6ZK2-t2c4Yh"
       },
       "source": [
-        "The medianComplexValue depends on more values, not just one. Some of those columns have a bigger impact on the medianComplexValue especially when the model is beeing trained. We have to detemine what column are significant for the medianComplexValue. To see the corelation between each variable and the medianComplexValue we will plot on the x axis the variable and on the y axis the medianComplexValue. The graf will show us how the y changes in corelation to x. All variables should be tested, but for demonstration purposes we will show just some of them to explain the importance of these variables.\n",
+        "The medianComplexValue depends on more values, not just one. Some of those columns have a bigger impact on the medianComplexValue especially when the model is beeing trained. We have to detemine which columns are significant for the medianComplexValue. To see the corelation between each variable and the medianComplexValue we will plot on the x axis the variable and on the y axis the medianComplexValue. The graph will show us how y changes in corelation to x. All variables were tested, but for demonstration purposes we will show just some of them to explain the importance of these variables.\n",
         "\n",
         "\n",
         "As we can see in the plots bellow, in the first plot, where we have complexInhabitats on x and medianComplexValue on y, the x axis takes values mostly from 0 to 0.4 while on the y axis the values cover all the range of y axis. \n",
         "\n",
-        "From the plot we can conclude that the medianComplexValue is evenly distributed, or, it does not have a direction. But, as we will see in the next examples, there is a varaible that makes medianComlValue go in one direction."
+        "From the plot we can conclude that the medianComplexValue is evenly distributed, or, it does not have a direction. But, as we will see in the next examples, there is a variable that makes medianComlValue go in one direction."
       ]
     },
     {
@@ -355,7 +355,7 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +385,7 @@
         "id": "waxPVDlcjZMz"
       },
       "source": [
-        "In the second graf, we ploted on the x axis the values from the 8th column and on the y axis the median complex value. The difference between this plot and the previous one is that the distribution of values has a clear slope. Or, in other words, there is a positive relation between them. Clearly we can see the there is a corelation between the 8th column and the medianComplexValue."
+        "In the second graph, we ploted on the x axis the values from the 8th column and on the y axis the median complex value. The difference between this plot and the previous one is that the distribution of values has a clear slope. Or, in other words - there is a positive relation between them. Clearly we can see the there is a corelation between the 8th column and the medianComplexValue."
       ]
     },
     {
@@ -411,7 +411,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,7 +467,7 @@
         "# let's measure that correlation\n",
         "pd_data.corr()"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +659,7 @@
         "id": "xxr6ij78ktfV"
       },
       "source": [
-        "Now, we've demonstrated that the 8th column hs the strogens corelation, wchich is 0.688075."
+        "Now, we've demonstrated that the 8th column hs the strongest corelation, which is 0.688075."
       ]
     },
     {
@@ -694,7 +694,7 @@
         "# let's take a look at a statistical summary.\n",
         "pd_data.describe()"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,9 +857,9 @@
         "id": "AQpxV2Cwmy6K"
       },
       "source": [
-        "**Split the Data**\n",
+        "**Spliting the Data**\n",
         "\n",
-        "The first thing we need to do before training the model is split the data into a training set and a test set. The training set is what we will train the model on and the test set is what we will test it on. The convention is to have 20% dedicated to testing and the remaining 80% to training, but these are not hard limits."
+        "The first thing we need to do before training the model is to split the data into a training set and a test set. The training set is what we will train the model on and the test set is what we will test it on. The convention is to have 20% dedicated to testing and the remaining 80% to training, but these are not hard limits."
       ]
     },
     {
@@ -874,7 +874,7 @@
         "train_data = pd_data[msk]\n",
         "test_data = pd_data[~msk]"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -913,7 +913,7 @@
         "    train_data[['medianCompexValue']]\n",
         ")"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -965,7 +965,7 @@
         "\n",
         "test_predictions"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1011,7 +1011,7 @@
         "r2score = r2_score(y_true, y_pred)\n",
         "print(\"r2_score = \", r2score)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1050,7 @@
         "plt.plot(test_data[['8']], test_predictions, color='royalblue', linewidth = 1, linestyle= '-')\n",
         "plt.show()"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1101,7 +1101,7 @@
         "mae = mean_absolute_error(y_true, y_pred)\n",
         "print(\"mean_absolute_error = \", mae)"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
